--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
   <title>Animated Differential Equations</title>
-
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <script src="index.js"></script>
 </head>
 
