I kinda like this way better

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-  <title>Animated Differential Equations</title>
+  <title>Wooooooooooooooo</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <script src="index.js"></script>
 </head>
