--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <html>
+    <head>
+        <title>Wooooooooooooooo</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <script src="index.js" type="module"></script>
+    </head>
 
-<head>
-  <title>Wooooooooooooooo</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <script src="index.js"></script>
-</head>
-
-<body style="margin: 0">
-  <canvas id="canvas"></canvas>
-</body>
-
+    <body style="margin: 0">
+        <canvas id="canvas"></canvas>
+    </body>
 </html>
